bdr.BDR.scala.error
Compilation error:
BDR:4: error: value == is not a member of object String
Note that String extends Any, not AnyRef.
Such types can participate in value classes, but instances
cannot appear in singleton types or in reference comparisons.
  if (String=='R'){
            ^