bdr.BDR.scala.code
var finished:Int=0
while (finished==0){
  readMessage(): String
  if (String=='R'){
    left();
    forward();
  }
  finished=1
}